Fixing items wrap in div

--- a/app/client/styles/blocks/__main.scss
+++ b/app/client/styles/blocks/__main.scss
@@ -3,5 +3,12 @@ section.main {
   @include padding(8px);
   width: calc(100vw);
   //height: calc(100vh - 5em); --causing componant section scroll
-  //height: calc(100vh);
+  height: calc(100vh);
+
+  .wrap { 
+  	-webkit-flex-wrap: wrap;
+  	flex-wrap: wrap;
+  } 
 }
+
+
